--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="Home page.html">Home page</a></li>
+                    <li><a href="index.html">Home page</a></li>
                     <li><a href="contacts.html">Contacts</a></li>
                     <li><a href="home.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
