--- a/index.html
+++ b/index.html
@@ -4,49 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="all.js"></script>
-    <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="stylesheet" href="CSS/styles.css" type="text/css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="background-image">
+    <header id="header">
+        <img class="logo.image" src="IMAGES/18512309.jpg" width="150">
 
-        <header id="header">
-            <img class="logo.image" src="IMAGES/18512309.jpg" width="150">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home page</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    </div>
+    <h1>Sign Up Here</h1>
+    <label>Email Address
+        <input type="email" placeholder="wrcbdvc@gmail.com" />
 
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home page</a></li>
-                    <li><a href="contacts.html">Contacts</a></li>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div class="sign-up-page">
-            <form class="sign-up-form">
-                <h1>Sign Up Here</h1>
-                <label>Email Address
-                    <input type="email" placeholder="wrcbdvc@gmail.com" />
+    </label>
+    <div>
+        <input type="Submit"></button>
+    </div>
+    <div id="paragraph">
+        <p>Here is our landing page where you get to fill in a form which displays your birthday, gender and as well as
+            your Akan name. </p>
+        <p>The application checks whether the date and month entered is valid. if either of them is invalid, the
+            user is alerted and asked to enter a valid one.
+            The application outputs to the user, their Akan name depending on their gender. For example, if
+            a user is male and the result of the calculation is 0, then the application should match that with
+            Kwasi since Kwasi corresponds to Sunday which has an index 0. Hence the output the user will see
+            should be something like “Your Akan name is Kwasi”. That is all that we do.</p>
 
-                </label>
-                <div>
-                    <input type="Submit"></button>
-                </div>
+    </div>
 
-            </form>
 
-        </div>
-        <div id="paragraph">
-            <p>Welcome to our landing page where you get to see our web page, </p>
-            <p>well polished to sooth your taste upon our business, of making
-                birthday projects.
-            </p>
-        </div>
-        <img src="IMAGES/jewel-mahmud-CkeKF3V_vfc-unsplash.jpg" width="400">
-        <img src="IMAGES/nick-fewings-kmLUcvhqhSo-unsplash (1).jpg" width="400">
-        <img src="IMAGES/jason-leung-Xaanw0s0pMk-unsplash.jpg" width="400">
+    </div>
 
     </div>
     <footer class="footer">
@@ -61,7 +56,6 @@
             <div class="ft-main-item">
                 <h2 class="ft-title">About Us</h2>
                 <h2 class="ft-title">Contact Us</h2>
-                <h2 class="ft-title">Our prices</h2>
                 <h2 class="ft-title">Fun events</h2>
 
             </div>
