add index.html changes

--- a/index.html
+++ b/index.html
@@ -9,36 +9,31 @@
 </head>
 
 <body>
-    <header id="header">
-        <img class="logo.image" src="IMAGES/18512309.jpg" width="150">
-
+    <div id="header">
         <nav>
             <ul>
                 <li><a href="index.html">Home page</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
-    </header>
     </div>
-    <h1>Sign Up Here</h1>
-    <label>Email Address
-        <input type="email" placeholder="wrcbdvc@gmail.com" />
-
-    </label>
-    <div>
-        <input type="Submit"></button>
     </div>
     <div id="paragraph">
-        <p>Here is our landing page where you get to fill in a form which displays your birthday, gender and as well as
-            your Akan name. </p>
+        <h2>The Akan Names</h2>
         <p>The application checks whether the date and month entered is valid. if either of them is invalid, the
             user is alerted and asked to enter a valid one.
             The application outputs to the user, their Akan name depending on their gender. For example, if
             a user is male and the result of the calculation is 0, then the application should match that with
             Kwasi since Kwasi corresponds to Sunday which has an index 0. Hence the output the user will see
             should be something like “Your Akan name is Kwasi”. That is all that we do.</p>
+        <h1>Sign Up Here</h1>
+        <label>Email Address
+            <input type="email" placeholder="wrcbdvc@gmail.com" />
 
-    </div>
+        </label>
+        <div>
+            <input type="Submit"></button>
+        </div>
 
 
     </div>
